k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notas-max
  labels:
    name: notas-max
